# SEO

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml  test.yml
src/: __init__.py  main.py
src/ai/: __init__.py  auto_writer.py  content_editor.py  content_tester.py  content_writer.py  keyword_researcher.py  models.py  prompts.py  providers.py  seo_optimizer.py
src/analyzers/: __init__.py  content_analyzer.py  geo_checker.py  heading_analyzer.py  image_analyzer.py  link_analyzer.py  meta_analyzer.py  performance_analyzer.py  seo_geo_analyzer.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: ai_content.py  analyze.py  check.py  competitors.py  crawl.py  generators.py  (+2 more)
src/checkers/: __init__.py  broken_link_checker.py  canonical_checker.py  mobile_friendly_checker.py  redirect_checker.py
src/cli/: __init__.py  commands.py
src/competitors/: __init__.py  competitor_analyzer.py
src/crawlers/: __init__.py  page_fetcher.py  site_crawler.py  sitemap_parser.py
src/generators/: __init__.py  export_manager.py  report_generator.py  robots_generator.py  sitemap_generator.py
src/rank_tracker/: __init__.py  models.py  serp_checker.py  tracker.py
src/templates/: ai_writer.html  analyze.html  base.html  competitors.html  crawl.html  dashboard.html  rank_tracker.html  tools.html
src/utils/: __init__.py  config.py  html_parser.py  http_client.py  logger.py
tests/: __init__.py  test_analyzers.py
